After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743117 - / and ~ Don't work in filechooser's recent mode
/ and ~ Don't work in filechooser's recent mode
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2015-01-18 09:59 UTC by Timm Bäder
Modified: 2015-01-18 22:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkfilechooserwidget: Make ~ and / show the location entry (1.35 KB, patch)
2015-01-18 10:00 UTC, Timm Bäder
committed Details | Review

Description Timm Bäder 2015-01-18 09:59:15 UTC
Sorry if this is a duplicate but the amount of bugs for the filechooser is just too much for me to read through.

So, judging from 660450, pressing / and ~ in the recent mode of the filechooser should show the location entry. Currently this seems to be broken as I only get to see an empty box (?) without the entry inside of it.
Comment 1 Timm Bäder 2015-01-18 10:00:19 UTC
Created attachment 294776 [details] [review]
gtkfilechooserwidget: Make ~ and / show the location entry

... when in RECENT mode. This reportedly used to work and now only
showed an empty box instead of the location entry.