file chooser: Make ~ and / work in recent

Complained about in
https://bugzilla.gnome.org/show_bug.cgi?id=743117